# surfcat

./: LICENSE  README.md  pyproject.toml  run_tests.py
examples/: quickstart_example.py  test.xyz
surfcat/: __init__.py  region.py  species.py  system.py  utils.py
surfcat/analysis/: __init__.py  dynamics.py  hbonds.py  profiles.py
surfcat/plotting/: __init__.py  heatmaps.py  profiles.py  traces.py
tests/: test_surfcat.py
